# Letnaya_practica1

./: CMakeLists.txt  README.md  input.txt
app/: CMakeLists.txt
app/src/: main.c
cmake/: MyFunctions.cmake
lib/: CMakeLists.txt
lib/include/: hex_parser.h  replace.h
lib/src/: hex_parser.c  replace.c
